--- a/src/views/homepage/Home.ejs
+++ b/src/views/homepage/Home.ejs
@@ -12,7 +12,7 @@
   <!-----------------------------Header-------------------------------->
   <header>
     <div class="logo">
-      <a href=""><img src="/icon/Pet Accessories & Food.png"></a>
+      <a href=""><img src="images/icon/Pet Accessories & Food.png"></a>
     </div>
     <div class="menu">
       <li><a href="">THỨC ĂN <br> CHO CHÓ</a>
@@ -49,18 +49,18 @@
       <li><a href="">LIÊN HỆ</a></li>
     </div>
     <div class="others">
-      <li><input placeholder="Search" type="text"><i class="search"></i></li><img src="/icon/loupe.png" alt="">
-      <li><a href="" class="user"></a><img src="/icon/user.png" alt=""></li>
-      <li><a href="" class="shopping-bag"></a><img src="/icon/bag.png" alt=""></li>
+      <li><input placeholder="Search" type="text"><i class="search"></i></li><img src="images/icon/loupe.png" alt="">
+      <li><a href="" class="user"></a><img src="images/icon/user.png" alt=""></li>
+      <li><a href="/src/views/cart.html" class="shopping-bag"></a><img src="images/icon/bag.png" alt=""></li>
     </div>
   </header>
   <!-----------------------------Banner-------------------------------->
   <div class="banner">
     <div class="slide-show">
       <div class="list-img">
-        <img src="/bannerimgs/banner-desktop-kitcat_83a1d61bf9ce4bdc8cda190905d10948.webp" alt="">
-        <img src="/bannerimgs/kc-website-banner-ol-231 (1).webp" alt="">
-        <img src="/bannerimgs/kc-website-banner-ol-231.webp" alt="">
+        <img src="images/bannerimgs/banner-desktop-kitcat_83a1d61bf9ce4bdc8cda190905d10948.webp" alt="">
+        <img src="images/bannerimgs/kc-website-banner-ol-231 (1).webp" alt="">
+        <img src="images/bannerimgs/kc-website-banner-ol-231.webp" alt="">
       </div>
       <div class="btns">
         <button type="button" role="presentation" class="btn-right">
@@ -83,14 +83,14 @@
       <div class="cartegory-left">
         <ul>
           <li class="cartegory-left-li">
-            <a href="">THỨC ĂN CHO CHÓ <img src="/icon/dog-food.png" alt=""></a>
+            <a href="">THỨC ĂN CHO CHÓ <img src="images/icon/dog-food.png" alt=""></a>
             <ul>
               <li><a href="">THỨC ĂN HẠT</a></li>
               <li><a href="">PATE</a></li>
               <li><a href="">ĂN VẶT</a></li>
             </ul>
           </li>
-          <li class="cartegory-left-li"><a href="">PHỤ KIỆN CHO CHÓ <img src="/icon/dog-collar.png" alt=""></a>
+          <li class="cartegory-left-li"><a href="">PHỤ KIỆN CHO CHÓ <img src="images/icon/dog-collar.png" alt=""></a>
             <ul>
               <li><a href="">QUẦN ÁO</a></li>
               <li><a href="">VÒNG CỔ</a></li>
@@ -98,14 +98,14 @@
               <li><a href="">BALO & TÚI ĐỰNG</a></li>
             </ul>
           </li>
-          <li class="cartegory-left-li"><a href="">THỨC ĂN CHO MÈO <img src="/icon/pet-bowl.png" alt=""></a>
+          <li class="cartegory-left-li"><a href="">THỨC ĂN CHO MÈO <img src="images/icon/pet-bowl.png" alt=""></a>
             <ul>
               <li><a href="">THỨC ĂN HẠT</a></li>
               <li><a href="">PATE</a></li>
               <li><a href="">ĂN VẶT</a></li>
             </ul>
           </li>
-          <li class="cartegory-left-li"><a href="">PHỤ KIỆN CHO MÈO <img src="/icon/collar.png" alt="">
+          <li class="cartegory-left-li"><a href="">PHỤ KIỆN CHO MÈO <img src="images/icon/collar.png" alt="">
             </a>
             <ul>
               <li><a href="">QUẦN ÁO</a></li>
@@ -118,11 +118,11 @@
         <div class="auto-slide-footer">
           <div class="slide active">
             <i>advertiserment</i>
-            <img src="/ad-img/images.jpg" alt="Hình 1">
+            <img src="images/ad-imgs/images.jpg" alt="Hình 1">
           </div>
           <div class="slide">
             <i>advertiserment</i>
-            <img src="/ad-img/gametiles_com.kurogame.wutheringwaves.global.jpg" alt="Hình 2">
+            <img src="images/ad-imgs/gametiles_com.kurogame.wutheringwaves.global.jpg" alt="Hình 2">
           </div>
         </div>
       </div>
@@ -152,10 +152,7 @@
                 <%=dataTable[i].GiaBan %><sup>đ</sup>
               </p>
             </div>
-
             <% } %>
-
-
         </div>
         <div class="cartegory-right-bottom row">
           <div class="cartegory-right-bottom-item">
@@ -183,14 +180,14 @@
     <div class="support">
       <div class="suport-cus">
         <p>Chăm sóc khách hàng</p>
-        <li><img src="/icon/phone-call.png" alt=""><b>0901131141</b></li>
+        <li><img src="images/icon/phone-call.png" alt=""><b>0901131141</b></li>
       </div>
       <p>Follow Us</p>
       <div class="social">
-        <li><a href="https://www.facebook.com/profile.php?id=61572274223177"><img src="/icon/social-fb.png" alt=""></a>
+        <li><a href="https://www.facebook.com/profile.php?id=61572274223177"><img src="images/icon/social-fb.png" alt=""></a>
         </li>
-        <li><a href=""><img src="/icon/play.png" alt=""></a></li>
-        <li><a href=""><img src="/icon/social-media.png" alt=""></a></li>
+        <li><a href=""><img src="images/icon/play.png" alt=""></a></li>
+        <li><a href=""><img src="images/icon/social-media.png" alt=""></a></li>
       </div>
     </div>
   </div>
