user service+controller

--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -128,8 +128,8 @@
         <div class="form-group col-md-6">
           <label for="inputState">Giới tính</label>
           <select name="GioiTinh" class="form-control">
-            <option value="1">Trai</option>
-            <option value="0">Trap</option>
+            <option value="1">Nam</option>
+            <option value="0">Nữ</option>
           </select>
         </div>
       </div>
@@ -137,9 +137,9 @@
         <div class="form-group col-md-6">
           <label for="inputZip">Test QH</label>
           <select name="MALOAITK" class="form-control">
-            <option value="ad">Admin</option>
-            <option value="kh">Khách Hàng</option>
-            <option value="cc">Chủ cửa hàng</option>
+            <option value="1">Admin</option>
+            <option value="2">Chủ cửa hàng</option>
+            <option value="3">Khách Hàng</option>
           </select>
         </div>
         <div class="form-group col-md-6">
