--- a/src/views/homepage/Home.ejs
+++ b/src/views/homepage/Home.ejs
@@ -50,7 +50,7 @@
     </div>
     <div class="others">
       <li><input placeholder="Search" type="text"><i class="search"></i></li><img src="images/icon/loupe.png" alt="">
-      <li><a href="" class="user"></a><img src="images/icon/user.png" alt=""></li>
+      <li><a action="/register" class="user"></a><img src="images/icon/user.png" alt=""></li>
       <li><a href="/src/views/cart.html" class="shopping-bag"></a><img src="images/icon/bag.png" alt=""></li>
     </div>
   </header>
