--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -1,6 +1,7 @@
 <!-- register.html -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,8 @@
     <link rel="stylesheet" href="stylesheet/Home.css">
 </head>
 
-<body style="background: url('images/backgroundimgs/background1.jpg'); background-size: cover; background-repeat: no-repeat;">
+<body
+    style="background: url('images/backgroundimgs/background1.jpg'); background-size: cover; background-repeat: no-repeat;">
     <div class="containers">
         <p>ĐĂNG KÍ TÀI KHOẢN</p>
         <form action="/post-crud" method="POST">
@@ -19,7 +21,8 @@
                 </div>
                 <div class="form-group col-md-6">
                     <label for="inputPassword4">Mật khẩu</label>
-                    <input type="password" class="form-control" id="inputPassword4" placeholder="Nhập mât khẩu" name="Password">
+                    <input type="password" class="form-control" id="inputPassword4" placeholder="Nhập mât khẩu"
+                        name="Password">
                 </div>
             </div>
             <div class="form-row">
@@ -35,7 +38,7 @@
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="inputAddress">Địa chỉ</label>
-                    <input type="text" class="form-control"  name="DiaChi">
+                    <input type="text" class="form-control" name="DiaChi">
                 </div>
                 <div class="form-group col-md-6">
                     <label for="inputEmail4">Điện thoại</label>
@@ -52,9 +55,9 @@
                     </select>
                 </div>
                 <div class="form-group col-md-6">
-                    
+
                 </div>
-                
+
             </div>
             <button type="submit" class="btn btn-primary">Đăng ký</button>
         </form>
