--- a/src/views/homepage/Home.ejs
+++ b/src/views/homepage/Home.ejs
@@ -11,6 +11,7 @@
 <body>
   <!-----------------------------Header-------------------------------->
   <header>
+    <div class="header-top">
     <div class="logo">
       <a href=""><img src="images/icon/Pet Accessories & Food.png"></a>
     </div>
@@ -45,14 +46,18 @@
           <li><a href="">BALO & TÚI ĐỰNG CHO MÈO</a></li>
         </ul>
       </li>
-      <li><a href="">THÔNG TIN</a></li>
+      <li><a href="">THƯƠNG HIỆU</a></li>
       <li><a href="">LIÊN HỆ</a></li>
     </div>
-    <div class="others">
-      <li><input placeholder="Search" type="text"><i class="search"></i></li><img src="images/icon/loupe.png" alt="">
-      <li><a action="/register" class="user"></a><img src="images/icon/user.png" alt=""></li>
+    <div class="others">          
       <li><a href="/src/views/cart.html" class="shopping-bag"></a><img src="images/icon/bag.png" alt=""></li>
+      <li><a href="http://localhost:8080/register" class="user"><img src="images/icon/user.png" alt=""><p>Đăng nhập/ Đ.kí</p></a></li>
     </div>
+  </div>
+    <div class="searchs">
+    <input placeholder="Tìm kiếm sản phẩm..." type="input" class="search" name="" maxlength="40" size= "20"> 
+    <img src="images/icon/loupe.png" alt="">
+  </div>
   </header>
   <!-----------------------------Banner-------------------------------->
   <div class="banner">
